--- a/src/app/user/user-overview/user-overview.component.html
+++ b/src/app/user/user-overview/user-overview.component.html
@@ -20,7 +20,7 @@
           <td>{{ user.organization }}</td>
           <td>{{ user.email }}</td>
           <td class="text-nowrap">
-            <button type="button" class="btn btn-outline-primary tableIcon">
+            <button type="button" class="btn btn-outline-primary tableIcon userEditButton" [routerLink]="['../userEdit', user.id]">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
