--- a/src/app/user/user-edit/user-edit.component.html
+++ b/src/app/user/user-edit/user-edit.component.html
@@ -34,7 +34,7 @@
           </tbody>
         </table>
         <div class="d-flex flex-row-reverse">
-          <button type="submit" class="m-2 btn btn-primary">
+          <button type="submit" class="m-2 btn btn-primary updateFinalButton">
             Update gebruiker
           </button>
           <button type="submit" class="m-2 btn btn-outline-primary" routerLink="/userOverview">
