--- a/src/app/questionnaires/questionnaires.component.html
+++ b/src/app/questionnaires/questionnaires.component.html
@@ -127,7 +127,7 @@
               <a
                 type="button"
                 class="btn btn-outline-primary tableIcon"
-                routerLink="view"
+                [routerLink]="['../questionnaire/fill', questionnaire.id]"
               >
                 Vul vragenlijst in
               </a>
