--- a/src/app/questionnaires/create-questionnaire/create-questionnaire.component.html
+++ b/src/app/questionnaires/create-questionnaire/create-questionnaire.component.html
@@ -1,27 +1,41 @@
 <div class="container">
   <button class="btn btn-primary mb-3" type="button" routerLink="/questionnaires">Terug</button>
   <h1> Creeer een vragenlijst </h1>
-  <form [formGroup]="productForm" (ngSubmit)="createQuestionnaire()">
-    <p>
-      <label for="name">Naam vragenlijst</label>
-      <input type="text" id="name" name="name" formControlName="name" class="form-control mt-2" placeholder="Naam vragenlijst">
-    </p>
-    <div class="form-group">
-      <label for="questionnaireDescription">Beschrijving</label>
-      <input type="text" class="form-control mt-2" id="questionnaireDescription" placeholder="Beschrijving">
+  <form [formGroup]="questionnaireForm" (ngSubmit)="createQuestionnaire()">
+
+    <div class="form-group mb-3">
+      <label for="questionnaireName">Naam vragenlijst</label>
+      <input type="text" id="questionnaireName" name="questionnaireName" formControlName="questionnaireName" class="form-control" placeholder="Naam vragenlijst">
     </div>
-    <table class="table table-bordered" formArrayName="quantities">
-      <tr>
-        <th colspan="2">Vragen</th>
+    <div class="form-group mb-3">
+      <label for="questionnaireDescription">Beschrijving vragenlijst</label>
+      <input type="text" class="form-control mt-2" id="questionnaireDescription" formControlName="questionnaireDescription" placeholder="Beschrijving">
+    </div>
+    <div class="form-group mb-3">
+      <label for="questionnaireDescription">Datum van invullen</label>
+      <input type="date" class="form-control mt-2" id="questionnaireDate" formControlName="questionnaireDate" placeholder="dd/mm/yyyy">
+    </div>
+    <div class="form-group mb-3">
+      <label for="questionnaireName">Naam invuller</label>
+      <input type="text" id="userName" name="name" formControlName="userName" class="form-control" placeholder="Naam invuller">
+    </div>
+
+    <button class="btn btn-success mb-3" type="button" (click)= addSegment()>Segment toevoegen</button>
+    <button [ngStyle]="{'margin-left': '50px'}" type="button" class="btn btn-danger active mb-3">Segment verwijderen</button>
+
+    <table [ngStyle]="{'border': '1px solid grey'}" class="table table-bordered" formArrayName="questions">
+
+      <tr *ngFor="let segmentCtrl of segmentControls; let j=index" [formGroupName]="j">
+        <th colspan="2">Segment {{j+1}}</th>
         <th width="150px"><button type="button" (click)="addQuestion()" class="btn btn-success active mt-3 mb-3">Vraag toevoegen</button></th>
       </tr>
-      <tr *ngFor="let quantity of quantities().controls; let i=index" [formGroupName]="i">
+      <tr *ngFor="let questionCtrl of questionControls; let i=index" [formGroupName]="i">
         <td>
           <label class="mt-3"> Vraag {{i+1}} </label>
-          <input type="text" class="form-control">
+          <input type="text" class="form-control" formControlName="question" placeholder="Mooie vragen">
         </td>
         <td>
-            <select class="form-control" id="questionnaireType">
+            <select class="form-control" id="questionnaireType" formControlName="questionType">
               <option value="1">Open vraag</option>
               <option value="2">Gesloten vraag</option>
             </select>
@@ -29,6 +43,7 @@
           <button (click)="deleteQuestion(i)" class="btn btn-danger active">Vraag verwijderen</button>
         </td>
       </tr>
+
     </table>
     <button type="submit" class="btn btn-success" routerLink="/questionnaires">Submit</button>
   </form>
