--- a/src/app/user/user-overview/user-overview.component.html
+++ b/src/app/user/user-overview/user-overview.component.html
@@ -14,9 +14,9 @@
       </thead>
       <tbody>
         <tr *ngFor="let user of users; index as i">
-          <th>{{ i + 1 }}</th>
+          <th>{{ user.id.substring(user.id.length - 5) }}</th>
           <td>{{ user.name }}</td>
-          <td>{{ user.role }}</td>
+          <td>{{ userRoleToText(user.role) }}</td>
           <td>{{ user.organization }}</td>
           <td>{{ user.email }}</td>
           <td class="text-nowrap">
