--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="vh-100 bg-secondary">
+  <app-toasts></app-toasts>
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-9 col-lg-12 col-xl-10">
