--- a/src/app/questionnaires/create-questionnaire/create-questionnaire.component.html
+++ b/src/app/questionnaires/create-questionnaire/create-questionnaire.component.html
@@ -9,10 +9,10 @@
     </div>
     <div class="form-group mb-3">
       <label for="questionnaireDescription">Beschrijving vragenlijst</label>
-      <input type="text" class="form-control mt-2" id="questionnaireDescription" formControlName="questionnaireDescription" placeholder="Beschrijving">
+      <textarea type="text" class="form-control mt-2" id="questionnaireDescription" formControlName="questionnaireDescription" placeholder="Beschrijving"></textarea>
     </div>
     <div class="form-group mb-3">
-      <label for="questionnaireDescription">Datum van invullen</label>
+      <label for="questionnaireDescription">Datum van aanmaken</label>
       <input type="date" class="form-control mt-2" id="questionnaireDate" formControlName="questionnaireDate" placeholder="dd/mm/yyyy">
     </div>
     <div class="form-group mb-3">
@@ -44,8 +44,9 @@
         </td>
       </tr>
 
+
     </table>
-    <button type="submit" class="btn btn-success" routerLink="/questionnaires">Submit</button>
+    <button type="submit" class="btn btn-success" routerLink="/questionnaires">Creëer</button>
   </form>
   <br/>
 </div>
