Fix: localisation to dutch
/login
   - Remember me button

Everywhere
Localisation of dates (dd/MMMM/YYYY) 01 Januari 2023

User header (top right)
  - Change to "Welkom, {{user.name}}"

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -42,7 +42,7 @@
           id="dropdownBasic1"
           ngbDropdownToggle
         >
-          {{ this.user.user.name }}&nbsp;&nbsp;<i
+          Welkom, {{ this.user.user.name }}&nbsp;&nbsp;<i
             class="bi bi-person-fill vAlignIcon"
           ></i>
         </button>
