--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -23,7 +23,7 @@
                     <div class="form-check mb-3">
                       <input class="form-check-input" formControlName="rememberMe" type="checkbox" value="" id="rememberMe">
                       <label class="form-check-label" for="rememberMe">
-                        Remember me
+                        Onthoud mijn login gegevens.
                       </label>
                     </div>
                     <button class="btn btn-primary d-block btn-user w-100 mb-2" type="submit"
