fix: fixed the routing issue after dev merge

--- a/src/app/questionnaires/create-questionnaire/create-questionnaire.component.html
+++ b/src/app/questionnaires/create-questionnaire/create-questionnaire.component.html
@@ -1,3 +1,4 @@
+<app-navigation>
 <div class="container">
   <button class="btn btn-primary mb-3" type="button" routerLink="/questionnaires">Terug</button>
   <h1> Creeer een vragenlijst </h1>
@@ -46,7 +47,9 @@
 
 
     </table>
-    <button type="submit" class="btn btn-success" routerLink="/questionnaires">Creëer</button>
+    <button type="submit" class="btn btn-primary" routerLink="/questionnaires">Creëer</button>
   </form>
   <br/>
 </div>
+</app-navigation>
+
