--- a/src/app/questionnaires/questionnaires.component.html
+++ b/src/app/questionnaires/questionnaires.component.html
@@ -186,8 +186,8 @@
       this.user.user?.role == 'SPINE_ADMIN'
     "
   >
-    <a type="button" class="btn btn-primary" [routerLink]="['view', '1']"
-      ><i class="bi bi-clipboard2-plus-fill"></i> Creëer vragenlijst</a
+    <a type="button" class="btn btn-primary" [routerLink]="['../questionnaires/create']"
+    ><i class="bi bi-clipboard2-plus-fill"></i> Creëer vragenlijst</a
     >
   </div>
 </app-navigation>
