Fix: minor changes that account to alot of total changes

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="vh-100 bg-secondary">
   <app-toasts></app-toasts>
-  <div class="container">
+  <div class="container container-top-margin">
     <div class="row justify-content-center">
       <div class="col-md-9 col-lg-12 col-xl-10">
         <div class="card shadow-lg border-0 my-5">
