--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,67 +1,36 @@
-@media only screen and (max-width: 600px) {
-    .sidenav {
-        width: 0px; 
-    }
-    #hamburgerButton {
-        display: block;
-    }
-  main {
-    margin-left: 20px;
-    margin-top: 20px;
-  }
+.navigation__nav {
+  background: #20285a;
 }
 
-@media only screen and (min-width: 600px) {
-    .sidenav {
-        width: 250px;
-    }
-    #hamburgerButton {
-        display: none;
-    }
-  main {
-    margin-left: 280px;
-    margin-top: 20px;
-  }
+.navigation__nav__list {
+  display: flex !important;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 1rem;
 }
 
-.sidenav {
-  height: 100%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #0e1922;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-  box-shadow: 0px 0px 8px #888888;
-
-  &.open {
-    width: 250px;
-  }
-
-  .closed {
-    width: 0;
-  }
-
-  a {
-    padding: 8px 8px 8px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #f1f1f1;
-    display: block;
-    transition: 0.3s;
-  }
-
-  a:hover {
-    color: #818181;
-  }
-
-  .sidenav::-webkit-scrollbar {
-    display: none;
-  }
+.navigation__userProfile {
+  flex-grow: 1; 
+  text-align: end;
 }
 
-main {
-  margin-right: 16px;
+.navigation__nav__list__item {
+  list-style: none;
+  margin: 0 1rem;
+  padding: 0 .25rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+}
+
+.navigation__nav__list__item__link {
+  text-decoration: none;
+  color: #fff;
+}
+
+.activeRoute {
+  color: #e76352;
 }
