Fix: wrong header

--- a/src/app/entries/entries.component.html
+++ b/src/app/entries/entries.component.html
@@ -1,6 +1,6 @@
 <app-navigation>
     <app-toasts></app-toasts>
-    <h1>Vragenlijsten</h1>
+    <h1>Inzendingen</h1>
     <div class="table-responsive">
       <table class="table table-striped">
         <thead>
