--- a/src/app/entries/entries.component.html
+++ b/src/app/entries/entries.component.html
@@ -1,29 +1,48 @@
-<app-navigation>
-    <app-toasts></app-toasts>
+<app-navigation></app-navigation>
+
+<app-toasts></app-toasts>
+<div class="container container-top-margin">
+  <div class="searchbar__top">
     <h1>Inzendingen</h1>
-    <div class="table-responsive">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Vragenlijst</th>
-            <th scope="col">Aangemaakt</th>
-            <th scope="col">Inzien</th>
-          </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let entry of entries">
-                <th scope="row">{{ entry.id.substr(entry.id.length - 5) }}</th>
-                <td>{{ entry.questionnaireName }}</td>
-                <td>{{ entry.timestamp | date: 'dd-MM-yyyy' }}</td>
-                <td>
-                <a [routerLink]="['view', entry.id]">
-                    <i class="bi bi-eye-fill"></i>
-                </a>
-                </td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </app-navigation>
-  
+    <form id="searchForm" class="searchForm">
+      <div class="form-group">
+        <div class="input-group" id="filterAll">
+          <div class="input-group-addon searchbar__icon">
+            <i class="bi bi-search"></i>
+          </div>
+          <input
+            type="text"
+            class="form-control"
+            name="searchString"
+            placeholder="Zoek Inzendingen op naam of ID..."
+            [(ngModel)]="searchString"
+          />
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="table-responsive">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Vragenlijst</th>
+          <th scope="col">Aangemaakt</th>
+          <th scope="col">Inzien</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let entry of entries | filterAll : searchString">
+          <th scope="row">{{ entry.id.substr(entry.id.length - 5) }}</th>
+          <td>{{ entry.questionnaireName }}</td>
+          <td>{{ entry.timestamp | date : "dd-MM-yyyy" }}</td>
+          <td>
+            <a [routerLink]="['view', entry.id]">
+              <i class="bi bi-eye-fill"></i>
+            </a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
