feat: changepassword routing rework

--- a/src/app/reset-password/change-password/change-password.component.html
+++ b/src/app/reset-password/change-password/change-password.component.html
@@ -18,7 +18,6 @@
                     placeholder="Ontvangen code"
                     formControlName="resetToken"
                     name="resetToken"
-                    ngModel
                   />
                   <input
                     class="mb-3 form-control form-control-user"
@@ -26,7 +25,6 @@
                     placeholder="Nieuw wachtwoord"
                     formControlName="newPassword"
                     name="newPassword"
-                    ngModel
                   />
                   <button
                     class="btn btn-primary d-block btn-user w-100 mb-2"
@@ -39,7 +37,7 @@
                 <div class="text-center">
                   <p class="small">
                     Verkeerde e-mail ingevoerd?
-                    <a routerLink="#" class="text-decoration-none">
+                    <a routerLink=".." class="text-decoration-none">
                       Stapje terug</a
                     >
                   </p>
