--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -33,7 +33,7 @@
               <div class="text-center">
                 <p class="small">
                   Weet je je wachtwoord weer ga dan een:
-                  <a class="text-decoration-none" routerLink="/login"
+                  <a class="text-decoration-none" routerLink=".."
                     >Stapje terug</a
                   >
                 </p>
