--- a/src/app/user/user-edit/user-edit.component.html
+++ b/src/app/user/user-edit/user-edit.component.html
@@ -1,3 +1,4 @@
+<router-outlet></router-outlet>
 <app-navigation></app-navigation>
 <div class="container container-top-margin">
   <app-toasts></app-toasts>
@@ -63,7 +64,7 @@
           <button
             type="submit"
             class="m-2 btn btn-outline-primary"
-            routerLink="/userOverview"
+            routerLink="../overview"
           >
             Annuleer
           </button>
