feat!: added reset password and change password tests

--- a/src/app/reset-password/change-password/change-password.component.html
+++ b/src/app/reset-password/change-password/change-password.component.html
@@ -27,6 +27,7 @@
                     name="newPassword"
                   />
                   <button
+                    id="submitBtn"
                     class="btn btn-primary d-block btn-user w-100 mb-2"
                     type="submit"
                     [disabled]="!changePasswordForm.valid"
