--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -23,6 +23,7 @@
                   [email]="true"
                 />
                 <button
+                  id="submitBtn"
                   class="btn btn-primary d-block btn-user w-100 mb-2"
                   type="submit"
                   [disabled]="!changePasswordForm.valid"
