--- a/src/app/questionnaires/create-questionnaire/create-questionnaire.component.html
+++ b/src/app/questionnaires/create-questionnaire/create-questionnaire.component.html
@@ -1,5 +1,6 @@
 <app-navigation>
-<div class="container">
+  <app-toasts></app-toasts>
+  <div class="container">
   <button class="btn btn-primary mb-3" type="button" routerLink="/questionnaires">Terug</button>
   <h1> Creeer een vragenlijst </h1>
   <form [formGroup]="questionnaireForm" (ngSubmit)="createQuestionnaire()">
@@ -21,33 +22,35 @@
       <input type="text" id="userName" name="name" formControlName="userName" class="form-control" placeholder="Naam invuller">
     </div>
 
-    <button class="btn btn-success mb-3" type="button" (click)= addSegment()>Segment toevoegen</button>
-    <button [ngStyle]="{'margin-left': '50px'}" type="button" class="btn btn-danger active mb-3">Segment verwijderen</button>
-
-    <table [ngStyle]="{'border': '1px solid grey'}" class="table table-bordered" formArrayName="questions">
+    <div style="margin-top:5px; margin-bottom:5px;" >
+    <button class="btn btn-success mb-3" type="button" (click)= addNewSegment()>Segment toevoegen</button>
+    <table [ngStyle]="{'border': '1px solid grey'}" class="table table-striped" formArrayName="questions">
 
       <tr *ngFor="let segmentCtrl of segmentControls; let j=index" [formGroupName]="j">
-        <th colspan="2">Segment {{j+1}}</th>
+        <th colspan="2">Segment {{j+1}}:</th>
+        <th width="200px"><button type="button" (click)="deleteSegment(j)" class="btn btn-danger active mt-3 mb-3">Verwijder segment</button></th>
         <th width="150px"><button type="button" (click)="addQuestion()" class="btn btn-success active mt-3 mb-3">Vraag toevoegen</button></th>
       </tr>
-      <tr *ngFor="let questionCtrl of questionControls; let i=index" [formGroupName]="i">
-        <td>
-          <label class="mt-3"> Vraag {{i+1}} </label>
-          <input type="text" class="form-control" formControlName="question" placeholder="Mooie vragen">
-        </td>
-        <td>
-            <select class="form-control" id="questionnaireType" formControlName="questionType">
-              <option value="1">Open vraag</option>
-              <option value="2">Gesloten vraag</option>
-            </select>
-        <td>
-          <button (click)="deleteQuestion(i)" class="btn btn-danger active">Vraag verwijderen</button>
-        </td>
-      </tr>
 
+<!--      <tr *ngFor="let questionCtrl of questionControls; let i=index" [formGroupName]="i" layout-align="center center">-->
+<!--        <td>-->
+<!--          <label class="mt-3"> Vraag {{i+1}} </label>-->
+<!--          <input type="text" class="form-control" formControlName="question" placeholder="Mooie vragen">-->
+<!--        </td>-->
+<!--        <td>-->
+<!--          <select id="userRoleInput" class="form-select" aria-label="Default select example" formControlName="questionnaireType">-->
+<!--            <option value="Open">Open</option>-->
+<!--            <option value="Gesloten">Gesloten</option>-->
+<!--          </select>-->
+<!--        <td>-->
+<!--          <button (click)="deleteQuestion(i)" class="btn btn-danger active">Vraag verwijderen</button>-->
+<!--        </td>-->
+<!--      </tr>-->
 
     </table>
-    <button type="submit" class="btn btn-primary" routerLink="/questionnaires">Creëer</button>
+    </div>
+
+    <button type="submit" class="btn btn-primary mt-3" routerLink="/questionnaires" [disabled]="!questionnaireForm.valid">Creëer</button>
   </form>
   <br/>
 </div>
