Feat: increase spacing between links

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,7 +13,7 @@
     <div class="nav col-md-4 justify-content-end list-unstyled d-flex">
       <span class="mb-3 mb-md-0 text-muted"
         >
-        <a href="https://www.spine.ngo/contact/">Contact</a> | <a href="https://www.spine.ngo/privacy-policy/"
+        <a href="https://www.spine.ngo/contact/">Contact</a>&ensp;|&ensp;<a href="https://www.spine.ngo/privacy-policy/"
           >Privacy policy</a
         ></span
       >
