--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -13,3 +13,37 @@
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
 }
+
+
+.blob {
+  width: 100%;
+  height: 100%;
+  background: url('./assets/blob.svg') no-repeat center center;
+  background-size: cover;
+}
+
+.blobNavBar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  max-width: 200px;
+  max-height: 200px;
+}
+
+.wave {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  height: 100%;
+  max-height: 150px;
+  background: url('./assets/wave.svg') no-repeat center center;
+  background-size: cover;
+}
+
+.centrerenIsMoeielijkHeVince {
+  justify-items: center;
+  align-items: center;
+}
