--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,29 +1,61 @@
-<nav class="navigation__nav">
-  <div class="navigation__nav__list">
-    <a
-      routerLinkActive="active"
-      routerLink="/questionnaires"
-      class="navigation__nav__list__item navigation__nav__list__item__link"
-      [ngClass]="{ activeRoute: getRoute() == 'questionnaires' }"
-      ><i class="bi bi-list-ol vAlignIcon"></i>&nbsp;&nbsp;Vragenlijsten</a
+<nav class="navigation__nav navbar navbar-expand-sm">
+  <div class="navigation__nav__list container-fluid">
+    <button
+      (click)="collapsed = !collapsed"
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarLinks"
+      aria-controls="navbarLinks"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
     >
-    <a
-      routerLinkActive="active"
-      routerLink="/user"
-      *ngIf="this.user.user.role == 'SPINE_ADMIN'"
-      class="navigation__nav__list__item navigation__nav__list__item__link"
-      [ngClass]="{ activeRoute: getRoute() == 'user' }"
-      ><i class="bi bi-people-fill vAlignIcon"></i>&nbsp;&nbsp;Gebruikers</a
+      <i
+        class="bi bi-list"
+        style="color: #fff; width: 64px; aspect-ratio: 1"
+      ></i>
+    </button>
+    <div
+      class="navigation__hamburger-menu collapse navbar-collapse"
+      [class.collapse]="collapsed"
+      (window:resize)="collapsed = true"
+      id="navbarLinks"
     >
-    <a
-      routerLinkActive="active"
-      routerLink="/entries"
-      *ngIf="this.user.user.role == 'CAREGIVER'"
-      class="navigation__nav__list__item navigation__nav__list__item__link"
-      [ngClass]="{ activeRoute: getRoute() == 'entries' }"
-      ><i class="bi bi-envelope-paper vAlignIcon"></i>&nbsp;&nbsp;Inzendingen
-    </a>
-
+      <ul class="navbar-nav">
+        <li class="nav-item navigation__nav__list__item">
+          <a
+            routerLinkActive="active"
+            routerLink="/questionnaires"
+            class="navigation__nav__list__item navigation__nav__list__item__link"
+            [ngClass]="{ activeRoute: this.path == 'questionnaires' }"
+            ><i class="bi bi-list-ol vAlignIcon"></i
+            >&nbsp;&nbsp;Vragenlijsten</a
+          >
+        </li>
+        <li class="nav-item navigation__nav__list__item">
+          <a
+            routerLinkActive="active"
+            routerLink="/user"
+            *ngIf="this.user.user.role == 'SPINE_ADMIN'"
+            class="navigation__nav__list__item navigation__nav__list__item__link"
+            [ngClass]="{ activeRoute: this.path == 'user' }"
+            ><i class="bi bi-people-fill vAlignIcon"></i
+            >&nbsp;&nbsp;Gebruikers</a
+          >
+        </li>
+        <li class="nav-item navigation__nav__list__item">
+          <a
+            routerLinkActive="active"
+            routerLink="/entries"
+            *ngIf="this.user.user.role == 'CAREGIVER'"
+            class="navigation__nav__list__item navigation__nav__list__item__link"
+            [ngClass]="{ activeRoute: this.path == 'entries' }"
+            ><i class="bi bi-envelope-paper vAlignIcon"></i
+            >&nbsp;&nbsp;Inzendingen
+          </a>
+        </li>
+      </ul>
+    </div>
     <div *ngIf="this.user" ngbDropdown class="navigation__userProfile">
       <button
         type="button"
