--- a/src/app/user/user-create/user-create.component.html
+++ b/src/app/user/user-create/user-create.component.html
@@ -23,7 +23,7 @@
       <option value="CAREGIVER">Hulpverlener</option>
     </select>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-      <button type="button" class="m-2 btn btn-primary" routerLink="../overview">Terug</button>
+      <button type="button" class="m-2 btn btn-primary" routerLink="/users">Terug</button>
       <button type="submit" class="m-2 btn btn-primary" [disabled]="!registerForm.valid">
         Creëer gebruiker
       </button>
