--- a/src/app/user/user-edit/user-edit.component.html
+++ b/src/app/user/user-edit/user-edit.component.html
@@ -64,7 +64,7 @@
           <button
             type="submit"
             class="m-2 btn btn-outline-primary"
-            routerLink="../overview"
+            routerLink="/users"
           >
             Annuleer
           </button>
