--- a/src/app/user/user-overview/user-overview.component.html
+++ b/src/app/user/user-overview/user-overview.component.html
@@ -42,7 +42,7 @@
             <button
               type="button"
               class="btn btn-outline-primary tableIcon userEditButton"
-              [routerLink]="['../edit', user.id]"
+              [routerLink]="['edit', user.id]"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -86,7 +86,7 @@
     </table>
   </div>
   <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-    <button type="button" class="btn btn-primary" routerLink="../create">
+    <button type="button" class="btn btn-primary" routerLink="new">
       Creëer gebruiker
     </button>
   </div>
