--- a/src/app/questionnaires/questionnaires-view/questionnaires-view.component.html
+++ b/src/app/questionnaires/questionnaires-view/questionnaires-view.component.html
@@ -80,7 +80,7 @@
           "
           class="align-middle"
         >
-          <th>{{ questionnaire.id.substr(questionnaire.id.length - 5) }}</th>
+          <th>{{ questionnaire.id.substring(questionnaire.id.length - 5) }}</th>
           <td class="align-middle">{{ questionnaire.name }}</td>
           <td
             *ngIf="
