wooooowww animation go brrrr

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -70,7 +70,6 @@
     </div>
   </div>
   <footer>
-    <!-- In this footer i want an animated wave -->
-    <div class="wave"></div>
+    <div class="wave" id="wave"></div>
   </footer>
 </div>
