--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -39,11 +39,21 @@
   width: 100vw;
   height: 100%;
   max-height: 150px;
-  background: url('./assets/wave.svg') no-repeat center center;
+  background: url('./assets/wave.svg') repeat-x center center;
   background-size: cover;
 }
 
 .centrerenIsMoeielijkHeVince {
   justify-items: center;
   align-items: center;
+}
+
+// Wave animation
+@keyframes wave {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
