--- a/src/app/reset-password/change-password/change-password.component.html
+++ b/src/app/reset-password/change-password/change-password.component.html
@@ -1,4 +1,4 @@
-<div class="vh-100 bg-dark">
+<div class="vh-100 bg-dark d-flex align-items-center justify-content-center">
   <app-toasts></app-toasts>
   <div class="container">
     <div class="row justify-content-center">
