fix: added tooltips and icons for clarification

--- a/src/app/entries/entries.component.html
+++ b/src/app/entries/entries.component.html
@@ -37,7 +37,13 @@
           <td>{{ entry.questionnaireName }}</td>
           <td>{{ entry.timestamp | date : "dd-MM-yyyy" }}</td>
           <td>
-            <a [routerLink]="['view', entry.id]">
+            <a [routerLink]="['view', entry.id]"
+            type="button"
+            class="btn btn-outline-primary tableIcon"
+            placement="top" 
+            ngbTooltip="Inzending bekijken"
+            container="body"
+            >
               <i class="bi bi-eye-fill"></i>
             </a>
           </td>
