--- a/src/app/user/user-create/user-create.component.html
+++ b/src/app/user/user-create/user-create.component.html
@@ -22,9 +22,14 @@
       <option value="SPINE_ADMIN">Spine administrator</option>
       <option value="CAREGIVER">Hulpverlener</option>
     </select>
-    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-      <button type="button" class="m-2 btn btn-primary" routerLink="/users">Terug</button>
+    <div class="d-grid gap-2 d-md-flex justify-content-between">
+      <button type="button" class="m-2 btn btn-primary" routerLink="/users">
+        <i class="bi bi-backspace"></i> &nbsp;
+        Terug
+      
+      </button>
       <button type="submit" class="m-2 btn btn-primary" [disabled]="!registerForm.valid">
+        <i class="bi bi-person-add"></i> &nbsp;
         Creëer gebruiker
       </button>
     </div>
