Feat: User enabled can be updated in Edit window

--- a/src/app/user/user-edit/user-edit.component.html
+++ b/src/app/user/user-edit/user-edit.component.html
@@ -62,10 +62,10 @@
                   id="updateUserStatus"
                   class="form-select"
                   aria-label="Default select example"
-                  formControlName="updateUserRole"
+                  formControlName="updateUserEnabled"
                 >
-                  <option value="Enabled">Actief</option>
-                  <option value="Disabled">Inactief</option>
+                  <option value="true">Actief</option>
+                  <option value="false">Inactief</option>
                 </select>
               </td>
             </tr>
