--- a/src/app/reset-password/change-password/change-password.component.html
+++ b/src/app/reset-password/change-password/change-password.component.html
@@ -6,7 +6,7 @@
         <div class="card shadow-lg border-0 my-5">
           <div class="card-body p-0">
             <div class="card-body p-0">
-              <div class="p-5">
+              <div class="p-3 p-sm-5">
                 <h4 class="text-center text-dark">Nieuw wachtwoord</h4>
                 <form
                   [formGroup]="changePasswordForm"
