--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -6,7 +6,7 @@
       <div class="col-md-9 col-lg-12 col-xl-10">
         <div class="card shadow-lg border-0 my-5">
           <div class="card-body p-0">
-            <div class="p-5">
+            <div class="p-3 p-sm-5">
               <h4 class="text-center text-dark">Wachtwoord vergeten?</h4>
               <p class="text-center text-dark mb-4">Ik help je even!</p>
               <form
