Feat: Add error handling to every API call except user create/edit. Those 2 calls need a little rework first.

--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -11,7 +11,7 @@
               <p class="text-center text-dark mb-4">Ik help je even!</p>
               <form
                 [formGroup]="changePasswordForm"
-                (ngSubmit)="onChangePassword()"
+                (ngSubmit)="onRequestNewPassword()"
               >
                 <input
                   class="mb-3 form-control form-control-user"
